--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "abc-demo-app",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
+  "proxy":"http://abc-demo-app-backend.herokuapp.com/api/employees",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
